login and register css done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  background-color: #ecf0f3;
+  font-weight: 700;
+  font-family: "Lato", sans-serif;
+  /* min-height: 100vh; */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  color: #555;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-register-div {
+  width: 300px;
+  height: 70%;
+  padding: 60px 35px 35px 35px;
+  border-radius: 40px;
+  background-color: #ecf0f3;
+  box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+}
+
+.title {
+  text-align: center;
+  font-size: 28px;
+  padding-top: 24px;
+  letter-spacing: 0.5px;
+}
+
+.form-signin {
+  width: 100%;
+  padding: 100px 5px 100px 0px;
+}
+
+.form-signup {
+  width: 100%;
+  padding: 35px 5px 5px 0px;
+}
+
+.form-group input {
+  border: none;
+  outline: none;
+  background-color: #ecf0f3;
+  font-size: 18px;
+  color: #555;
+  padding: 20px 40px 20px 35px;
+  margin-bottom: 30px;
+  border-radius: 25px;
+  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+}
+
+.signin-register-button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 60px;
+  border-radius: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Lato', sans-serif;
+  color: #fff;
+  text-align: center;
+  background-color: #24cfaa;
+  box-shadow: 3px 3px 8px #b1b1b1,
+  -3px -3px 8px #fff;
+  transition: 0.5s;
+}
+.signin-register-button:hover {
+  background-color: #2fdbb6;
+}
+.signin-register-button:active {
+  background-color: #1da88a;
+}
+.signup-link-2 {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.signin-link-2 {
+  text-align: center;
 }
